# UU-raytracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: defaults.cmake  gl_setup.cmake  project_tools.cmake
source/: cg_utils.h  cg_utils2.h  main.cpp  rt_box.h  rt_hitable.h  rt_ray.h  rt_raytracing.cpp  rt_sphere.h
source/shaders/: draw_image.frag
